# rfq

./: .env  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  NOTES.md  README.md  RFQ_API.md  app.py  block_rfq_ui.html  block_rfq_ui.py  config.json  copy.sh  data_model.py  deploy.yml  deribit_monitor.py  docker-compose.yml  inventory.ini  mmbot.py  pyproject.toml  query_mongo.py  questions.md  redis_cli.py  test_deribit_api.py  test_deribit_direct.py  test_redis_subscriber.py  test_zmq_subscriber.py  ws_base.py  ws_client.py  ws_client_redis.py  ws_portal.py  ws_server.py  zmq_to_redis.py
.claude/: settings.local.json
.claude/rules/: redis.md
.claude/skills/mongo-rfq/: SKILL.md
.claude/skills/redis-rfq/: SKILL.md
config/: mmbot.json  mmbot_testnet.json  ws_client_config.json  ws_client_config_mongodb.json  ws_client_config_mongodb_redis.json  ws_client_config_testnet_mongodb.json  ws_client_config_testnet_mongodb_redis.json
deprecated/: ws_client.py  ws_server.py
